--- a/src/main/resources/com/mycompany/capsprojects/ResetPassword.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/ResetPassword.fxml
@@ -1,6 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="241.0" prefWidth="407.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane id="AnchorPane" prefHeight="336.0" prefWidth="557.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ImageView fitHeight="83.0" fitWidth="73.0" layoutX="242.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../Downloads/logo%20copy.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="201.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reset your password">
+         <font>
+            <Font name="Arial Bold" size="15.0" />
+         </font>
+      </Text>
+      <Text layoutX="123.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New Password">
+         <font>
+            <Font name="Arial Bold" size="11.0" />
+         </font>
+      </Text>
+      <Button layoutX="206.0" layoutY="266.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="134.0" style="-fx-background-color: #658D6E;" text="Reset password" textFill="WHITE">
+         <font>
+            <Font name="Arial Bold" size="12.0" />
+         </font>
+      </Button>
+      <PasswordField layoutX="120.0" layoutY="152.0" prefHeight="32.0" prefWidth="306.0" promptText="Enter new password" />
+      <PasswordField layoutX="120.0" layoutY="205.0" prefHeight="32.0" prefWidth="306.0" promptText="Re enter Password" />
+      <Text layoutX="121.0" layoutY="199.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirm New Password">
+         <font>
+            <Font name="Arial Bold" size="11.0" />
+         </font>
+      </Text>
+   </children>
+</AnchorPane>
