--- a/src/main/resources/com/mycompany/capsprojects/LoginFormAdmin.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/LoginFormAdmin.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="336.0" prefWidth="557.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane layoutX="241.0" layoutY="-2.0" prefHeight="345.0" prefWidth="332.0" style="-fx-background-color: #29539A;">
          <children>
@@ -44,7 +44,7 @@
             </Text>
          </children>
       </Pane>
-      <Button fx:id="button" layoutX="290.0" layoutY="229.0" onAction="handleButtonAction" prefHeight="20.0" prefWidth="70.0" style="-fx-background-color: #658D6E;" text="Login" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="button" layoutX="290.0" layoutY="229.0" prefHeight="20.0" prefWidth="70.0" style="-fx-background-color: #658D6E;" text="Login" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Bold" size="10.0" />
          </font>
