all UI and navigation done, resetpassword not yet

--- a/src/main/resources/com/mycompany/capsprojects/CreateAccountAdmin.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/CreateAccountAdmin.fxml
@@ -21,7 +21,7 @@
                </font>
             </Text>
             <TextField layoutX="119.0" layoutY="210.0" prefHeight="42.0" prefWidth="414.0" promptText="Enter your full name" />
-            <Text fill="WHITE" layoutX="119.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign up - Agent" wrappingWidth="383.50279603639643">
+            <Text fill="WHITE" layoutX="119.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign up - Admin" wrappingWidth="383.50279603639643">
                <font>
                   <Font name="Arial Bold" size="50.0" />
                </font>
@@ -40,7 +40,7 @@
                   <Font name="Arial Bold" size="20.0" />
                </font>
             </Text>
-            <Text fill="WHITE" layoutX="119.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Agent Number" wrappingWidth="140.02408876774587">
+            <Text fill="WHITE" layoutX="119.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin Number" wrappingWidth="150.42411318180837">
                <font>
                   <Font name="Arial Bold" size="20.0" />
                </font>
