--- a/src/main/resources/com/mycompany/capsprojects/ForgotPassword.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/ForgotPassword.fxml
@@ -8,31 +8,30 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane id="AnchorPane" prefHeight="336.0" prefWidth="557.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="83.0" fitWidth="73.0" layoutX="242.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="83.0" fitWidth="73.0" layoutX="241.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../../../Downloads/logo%20copy.png" />
+            <Image url="@../../../image/logo.png" />
          </image>
       </ImageView>
-      <TextField layoutX="132.0" layoutY="179.0" prefHeight="30.0" prefWidth="294.0" promptText="Enter your email" />
-      <Text layoutX="217.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot Password">
+      <TextField layoutX="131.0" layoutY="191.0" prefHeight="30.0" prefWidth="294.0" promptText="Enter your email" />
+      <Text layoutX="216.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot Password">
          <font>
             <Font name="Arial Bold" size="15.0" />
          </font>
       </Text>
-      <Text layoutX="227.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your email below">
+      <Text layoutX="226.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your email below">
          <font>
             <Font name="Arial" size="10.0" />
          </font>
       </Text>
-      <Text layoutX="133.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
+      <Text layoutX="132.0" layoutY="183.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
          <font>
             <Font name="Arial Bold" size="11.0" />
          </font>
       </Text>
-      <Button layoutX="206.0" layoutY="247.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="134.0" style="-fx-background-color: #658D6E;" text="Verify Email" textFill="WHITE">
+      <Button layoutX="205.0" layoutY="259.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="134.0" style="-fx-background-color: #658D6E;" text="Verify Email" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="12.0" />
          </font>
