--- a/src/main/resources/com/mycompany/capsprojects/LoginFormAgent.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/LoginFormAgent.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -12,11 +11,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="768.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="768.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.capsprojects.LoginFormAgentController">
    <children>
       <Pane layoutX="537.0" layoutY="-2.0" prefHeight="772.0" prefWidth="664.0" style="-fx-background-color: #398A45;">
          <children>
-            <Button fx:id="button" layoutX="119.0" layoutY="431.0" prefHeight="40.0" prefWidth="140.0" style="-fx-background-color: #29539A; -fx-border-radius: 10;" text="Login" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="agentLoginButton" layoutX="119.0" layoutY="431.0" onAction="#goToDashboard" prefHeight="40.0" prefWidth="140.0" style="-fx-background-color: #29539A; -fx-border-radius: 10;" text="Login" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -36,7 +35,7 @@
                   <Font size="15.0" />
                </font>
             </CheckBox>
-            <Text fill="WHITE" layoutX="274.0" layoutY="562.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot Password?" wrappingWidth="123.37588500976562">
+            <Text fx:id="forgotPasswordAgent" fill="WHITE" layoutX="274.0" layoutY="562.0" onMouseClicked="#goToForgotPasswordPage" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot Password?" wrappingWidth="123.37588500976562">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
@@ -46,7 +45,7 @@
                   <Font name="Arial" size="15.0" />
                </font>
             </Text>
-            <Text fill="WHITE" layoutX="353.0" layoutY="524.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create an Account" wrappingWidth="134.10369990727804">
+            <Text fx:id="agentCreateAccount" fill="WHITE" layoutX="353.0" layoutY="524.0" onMouseClicked="#goToAgentSignIn" strokeType="OUTSIDE" strokeWidth="0.0" text="Create an Account" wrappingWidth="134.10369990727804">
                <font>
                   <Font name="Arial Bold" size="15.0" />
                </font>
@@ -77,6 +76,5 @@
             <Image url="@../../../image/logoname.png" />
          </image>
       </ImageView>
-      <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
    </children>
 </AnchorPane>
