--- a/src/main/resources/com/mycompany/capsprojects/DashboardPage.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/DashboardPage.fxml
@@ -1,44 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" prefHeight="768.0" prefWidth="1200.0" style="-fx-background-color: #F5F5F7;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.capsprojects.WelcomePageController">
 
    <children>
-      <StackPane prefHeight="771.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF;" />
-      <Pane layoutX="243.0" layoutY="39.0" prefHeight="200.0" prefWidth="200.0">
+      <Pane prefHeight="778.0" prefWidth="150.0" style="-fx-background-color: #FFFFFF;">
          <children>
-            <Text layoutX="11.0" layoutY="86.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard" textAlignment="CENTER">
+            <ImageView fitHeight="83.0" fitWidth="139.0" layoutX="20.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/logo.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="54.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/home.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="54.0" layoutY="230.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/repository_inactive.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="54.0" layoutY="330.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/archive_inactive.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="54.0" layoutY="430.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/document_approval_inactive.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="54.0" layoutY="530.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/settings_inactive.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="54.0" layoutY="660.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/logout_inactive.png" />
+               </image>
+            </ImageView>
+            <Text fill="#d1d1d9" layoutX="52.0" layoutY="720.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Logout" textAlignment="CENTER">
                <font>
-                  <Font name="Arial Bold" size="30.0" />
+                  <Font name="Segoe UI Light" size="15.0" />
                </font>
             </Text>
          </children>
       </Pane>
-      <Text layoutX="464.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please click to your destination" textAlignment="CENTER">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </Text>
-      <Button fx:id="agentButton" layoutX="397.0" layoutY="342.0" mnemonicParsing="false" onAction="#goToAgentLogin" prefHeight="64.0" prefWidth="428.0" style="-fx-background-color: #398A45; -fx-background-radius: 10;" text="Agent" textFill="WHITE">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Button>
-      <Button fx:id="adminButton" layoutX="396.0" layoutY="452.0" mnemonicParsing="false" onAction="#goToAdminLogin" prefHeight="64.0" prefWidth="428.0" style="-fx-background-color: #29539A; -fx-background-radius: 10;" text="Admin" textFill="WHITE">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Button>
-      <Text layoutX="367.0" layoutY="583.0" strokeType="OUTSIDE" strokeWidth="0.0" text="By using this service, you understood and agree to the Country Bankers Insurance Group Services Terms of Use and Privacy Statement" textAlignment="CENTER" wrappingWidth="485.49998779296874">
-         <font>
-            <Font name="Arial" size="20.0" />
-         </font>
-      </Text>
+      <Pane layoutX="153.0" layoutY="-4.0" prefHeight="778.0" prefWidth="1049.0" style="-fx-background-color: #F5F5F7;">
+         <children>
+            <Text fill="#29539a" layoutX="30.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard" textAlignment="CENTER">
+               <font>
+                  <Font name="Segoe UI Black" size="30.0" />
+               </font>
+            </Text>
+            <Text layoutX="30.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Monday" textAlignment="CENTER">
+               <font>
+                  <Font name="Segoe UI Semibold" size="20.0" />
+               </font>
+            </Text>
+            <Text layoutX="110.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="June 1, 2025" textAlignment="CENTER">
+               <font>
+                  <Font name="Segoe UI Light" size="20.0" />
+               </font>
+            </Text>
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="650.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/notification.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="718.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/email.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="791.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/profile.png" />
+               </image>
+            </ImageView>
+            <Text layoutX="860.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin Name" textAlignment="CENTER">
+               <font>
+                  <Font name="Segoe UI Semibold" size="20.0" />
+               </font>
+            </Text>
+            <Text layoutX="860.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin" textAlignment="CENTER">
+               <font>
+                  <Font name="Segoe UI Light" size="17.0" />
+               </font>
+            </Text>
+            <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="1010.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../image/arrow%20down.png" />
+               </image>
+            </ImageView>
+            <Pane layoutX="274.0" layoutY="44.0" prefHeight="50.0" prefWidth="350.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 10;">
+               <children>
+                  <ImageView fitHeight="30.0" fitWidth="139.0" layoutX="15.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../image/search.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="50.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quick Search" textAlignment="CENTER">
+                     <font>
+                        <Font name="Segoe UI" size="20.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
