--- a/src/main/resources/com/mycompany/capsprojects/WelcomePage.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/WelcomePage.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -8,27 +10,32 @@
 <AnchorPane id="AnchorPane" prefHeight="768.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.capsprojects.WelcomePageController">
 
    <children>
-      <Text layoutX="478.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome!" textAlignment="CENTER">
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="506.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../image/logo.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="491.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome!" textAlignment="CENTER">
          <font>
             <Font name="Arial Bold" size="50.0" />
          </font>
       </Text>
-      <Text layoutX="464.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please click to your destination" textAlignment="CENTER">
+      <Text layoutX="477.0" layoutY="274.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please click to your destination" textAlignment="CENTER">
          <font>
             <Font name="Arial" size="20.0" />
          </font>
       </Text>
-      <Button fx:id="agentButton" layoutX="397.0" layoutY="342.0" mnemonicParsing="false" onAction="#goToAgentLogin" prefHeight="64.0" prefWidth="428.0" style="-fx-background-color: #398A45; -fx-background-radius: 10;" text="Agent" textFill="WHITE">
+      <Button fx:id="agentButton" layoutX="399.0" layoutY="334.0" mnemonicParsing="false" onAction="#goToAgentLogin" prefHeight="64.0" prefWidth="428.0" style="-fx-background-color: #398A45; -fx-background-radius: 10;" text="Agent" textFill="WHITE">
          <font>
             <Font size="30.0" />
          </font>
       </Button>
-      <Button fx:id="adminButton" layoutX="396.0" layoutY="452.0" mnemonicParsing="false" onAction="#goToAdminLogin" prefHeight="64.0" prefWidth="428.0" style="-fx-background-color: #29539A; -fx-background-radius: 10;" text="Admin" textFill="WHITE">
+      <Button fx:id="adminButton" layoutX="398.0" layoutY="444.0" mnemonicParsing="false" onAction="#goToAdminLogin" prefHeight="64.0" prefWidth="428.0" style="-fx-background-color: #29539A; -fx-background-radius: 10;" text="Admin" textFill="WHITE">
          <font>
             <Font size="30.0" />
          </font>
       </Button>
-      <Text layoutX="367.0" layoutY="583.0" strokeType="OUTSIDE" strokeWidth="0.0" text="By using this service, you understood and agree to the Country Bankers Insurance Group Services Terms of Use and Privacy Statement" textAlignment="CENTER" wrappingWidth="485.49998779296874">
+      <Text layoutX="369.0" layoutY="575.0" strokeType="OUTSIDE" strokeWidth="0.0" text="By using this service, you understood and agree to the Country Bankers Insurance Group Services Terms of Use and Privacy Statement" textAlignment="CENTER" wrappingWidth="485.49998779296874">
          <font>
             <Font name="Arial" size="20.0" />
          </font>
