--- a/src/main/resources/com/mycompany/capsprojects/CreateAccountAdmin.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/CreateAccountAdmin.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="768.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="768.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.capsprojects.CreateAccountAdminController">
    <children>
       <Pane prefHeight="772.0" prefWidth="664.0" style="-fx-background-color: #29539A;">
          <children>
@@ -20,7 +20,7 @@
                   <Font name="Arial" size="20.0" />
                </font>
             </Text>
-            <TextField layoutX="119.0" layoutY="210.0" prefHeight="42.0" prefWidth="414.0" promptText="Enter your full name" />
+            <TextField fx:id="adminNameTxt" layoutX="119.0" layoutY="210.0" prefHeight="42.0" prefWidth="414.0" promptText="Enter your full name" />
             <Text fill="WHITE" layoutX="119.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign up - Admin" wrappingWidth="383.50279603639643">
                <font>
                   <Font name="Arial Bold" size="50.0" />
@@ -31,10 +31,10 @@
                   <Font name="Arial Bold" size="20.0" />
                </font>
             </Text>
-            <TextField layoutX="119.0" layoutY="300.0" prefHeight="42.0" prefWidth="414.0" promptText="Enter your agent number" />
-            <TextField layoutX="119.0" layoutY="390.0" prefHeight="42.0" prefWidth="414.0" promptText="Enter your email" />
-            <PasswordField layoutX="119.0" layoutY="480.0" prefHeight="42.0" prefWidth="414.0" promptText="Enter your password" />
-            <PasswordField layoutX="119.0" layoutY="570.0" prefHeight="42.0" prefWidth="414.0" promptText="Re-enter password" />
+            <TextField fx:id="adminNumberTxt" layoutX="119.0" layoutY="300.0" prefHeight="42.0" prefWidth="414.0" promptText="Enter your agent number" />
+            <TextField fx:id="emailAdminTxt" layoutX="119.0" layoutY="390.0" prefHeight="42.0" prefWidth="414.0" promptText="Enter your email" />
+            <PasswordField fx:id="passwordAdminTxt" layoutX="119.0" layoutY="480.0" prefHeight="42.0" prefWidth="414.0" promptText="Enter your password" />
+            <PasswordField fx:id="confirmPassAdminTxt" layoutX="119.0" layoutY="570.0" prefHeight="42.0" prefWidth="414.0" promptText="Re-enter password" />
             <Text fill="WHITE" layoutX="119.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Full Name" wrappingWidth="98.00000762939453">
                <font>
                   <Font name="Arial Bold" size="20.0" />
@@ -60,7 +60,7 @@
                   <Font name="Arial Bold" size="20.0" />
                </font>
             </Text>
-            <Button fx:id="button" layoutX="119.0" layoutY="680.0" prefHeight="40.0" prefWidth="140.0" style="-fx-background-color: #658D6E;" text="Sign up" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="signUpAdminbtn" layoutX="119.0" layoutY="680.0" onAction="#signUpUser" prefHeight="40.0" prefWidth="140.0" style="-fx-background-color: #658D6E;" text="Sign up" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
