--- a/src/main/resources/com/mycompany/capsprojects/DashboardPage.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/DashboardPage.fxml
@@ -54,7 +54,7 @@
             </Text>
          </children>
       </Pane>
-      <Pane layoutX="153.0" layoutY="-4.0" prefHeight="778.0" prefWidth="1049.0" style="-fx-background-color: #F5F5F7;">
+      <Pane layoutX="153.0" layoutY="-4.0" prefHeight="778.0" prefWidth="1049.0" style="-fx-background-color: #F5F5F7; -fx-region-border-color: #C9CFCC;">
          <children>
             <Text fill="#29539a" layoutX="30.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard" textAlignment="CENTER">
                <font>
@@ -71,6 +71,20 @@
                   <Font name="Segoe UI Light" size="20.0" />
                </font>
             </Text>
+            <Pane layoutX="274.0" layoutY="44.0" prefHeight="50.0" prefWidth="350.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 10;">
+               <children>
+                  <ImageView fitHeight="30.0" fitWidth="139.0" layoutX="15.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../image/search.png" />
+                     </image>
+                  </ImageView>
+                  <Text layoutX="50.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quick Search" textAlignment="CENTER">
+                     <font>
+                        <Font name="Segoe UI" size="20.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
             <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="650.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../image/notification.png" />
@@ -101,20 +115,11 @@
                   <Image url="@../../../image/arrow%20down.png" />
                </image>
             </ImageView>
-            <Pane layoutX="274.0" layoutY="44.0" prefHeight="50.0" prefWidth="350.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 10;">
-               <children>
-                  <ImageView fitHeight="30.0" fitWidth="139.0" layoutX="15.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../image/search.png" />
-                     </image>
-                  </ImageView>
-                  <Text layoutX="50.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quick Search" textAlignment="CENTER">
-                     <font>
-                        <Font name="Segoe UI" size="20.0" />
-                     </font>
-                  </Text>
-               </children>
-            </Pane>
+            <Pane layoutX="30.0" layoutY="120.0" prefHeight="93.0" prefWidth="280.0" style="-fx-background-color: #E1E5EE;" />
+            <Pane layoutX="345.0" layoutY="120.0" prefHeight="93.0" prefWidth="280.0" style="-fx-background-color: #DFE5E2;" />
+            <Pane layoutX="30.0" layoutY="240.0" prefHeight="161.0" prefWidth="280.0" style="-fx-background-color: #FFFFFF;" />
+            <Pane layoutX="345.0" layoutY="240.0" prefHeight="161.0" prefWidth="280.0" style="-fx-background-color: #FFFFFF;" />
+            <Pane layoutX="30.0" layoutY="430.0" prefHeight="215.0" prefWidth="595.0" style="-fx-background-color: #FFFFFF;" />
          </children>
       </Pane>
    </children>
