--- a/src/main/resources/com/mycompany/capsprojects/CreateAccountAdmin.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/CreateAccountAdmin.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -65,11 +66,16 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Button>
-            <CheckBox layoutX="119.0" layoutY="631.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="307.0" text="I agree to the Terms and Conditions" textFill="WHITE">
+            <CheckBox fx:id="termsCondition" layoutX="119.0" layoutY="631.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="307.0" text="I agree to the Terms and Conditions" textFill="WHITE">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
             </CheckBox>
+            <Label fx:id="emailValidatetxt" layoutX="118.0" layoutY="432.0" prefHeight="17.0" prefWidth="220.0" textFill="#ff6a6a">
+               <font>
+                  <Font name="Arial Bold" size="12.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <ImageView fitHeight="205.0" fitWidth="449.0" layoutX="710.0" layoutY="307.0" pickOnBounds="true" preserveRatio="true">
