--- a/src/main/resources/com/mycompany/capsprojects/CreateAccountAgent.fxml
+++ b/src/main/resources/com/mycompany/capsprojects/CreateAccountAgent.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -70,6 +71,11 @@
                   <Font name="Arial" size="15.0" />
                </font>
             </CheckBox>
+            <Label fx:id="emailValidatetxt" layoutX="119.0" layoutY="432.0" prefHeight="15.0" prefWidth="229.0" textFill="#ff6a6a">
+               <font>
+                  <Font name="Arial Bold" size="12.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <ImageView fitHeight="205.0" fitWidth="449.0" layoutX="710.0" layoutY="307.0" pickOnBounds="true" preserveRatio="true">
